# vue3-rust-template

./: .eslintignore  .eslintrc.js  .gitignore  README.md  package-lock.json  package.json
src/: App.vue
src/components/: HelloWorld.vue
src/views/: Home.vue
wasm/: Cargo.toml
wasm/src/: lib.rs
