[package]
name = "vue3-rust"
version = "0.1.0"
authors = ["Tung Le"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# wasm-bindgen = "*"
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "b49bc2e9fd0273daf3552efb4d2962edf6ff0924"}

# workaround https://github.com/rustwasm/wasm-pack/issues/781
[package.metadata.wasm-pack.profile.release]
wasm-opt = false